# mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  GameConfig.h.in  Grid.cpp  Grid.h  Makefile  Mandelbrot.cpp  Mandelbrot.h  MandelbrotRenderer.cpp  MandelbrotRenderer.h  README.md  WindowGrid.h  main.cpp  mandelbrot.c  util.h
src/: log.c  log.h  main.c
